# system-aware-mas

./: .gitignore  .venv  CLAUDE.md  README.md  REBRANDING_SUMMARY.md  config_test.json  nohup.out  pyproject.toml  template.env
Datasets/: humaneval_dataset.py  math_dataset.py  mbpp_dataset.py  mmlu_dataset.py  precompute_mbpp_query_embeddings.py  precompute_role_embeddings.py
Experiments/: dataset_config.json  judge_responses.py  run_gsm8k.py  run_humaneval.py  run_math.py  run_mbpp.py  run_mmlu.py  run_system_router_demo.py  train_latency_estimator.py  train_latency_length_predictor.py  train_length_estimator.py  train_system_router_gsm8k.py  train_system_router_humaneval.py  train_system_router_math.py  train_system_router_mbpp.py  train_system_router_mmlu.py
MAR/Agent/: agent.py  agent_registry.py
MAR/Graph/: graph.py
MAR/InfraMind/: env.py  inframind_agent.py  inframind_graph.py  inframind_router.py  quality_estimator.py  trainer.py  training.py
MAR/LLM/: gpt_chat.py  llm.py  llm_embedding.py  llm_profile_full.json  llm_profile_full.py  (+4 more)
assets/: README.md
context/: inframind_theory.md  rl_training_problems.md
scripts/: MBPP_OFFLINE_SETUP.md  check_vllm_status.sh  download_mbpp_dataset.py  download_mbpp_dataset.sh  mas_test_gsm8k.sh  mas_test_mbpp.sh  mas_train_gsm8k.sh  mas_train_math.sh  mas_train_mbpp.sh  mas_train_mmlu.sh  slurm_train_full.sh  slurm_train_full_test.sh  slurm_train_humaneval.sh  test_vllm_metrics.py
visualization/: arrival_rate_latency_plot.ipynb  generate_motivation_plots.py  motivation_plots.ipynb  system_aware_router_theory.md
(+77 files in other folders)
